--- a/B_Functions/Cargo.toml
+++ b/B_Functions/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rust_decimal = "1.24"
+rust_decimal_macros = "1.24"
+time = "0.1.12"
+regex = "0.1.41"
